--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -35,6 +35,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <stringer.version>3.0.0</stringer.version>
+        <stringer.config>${basedir}/stringer.xml</stringer.config>
     </properties>
 
     <build>
@@ -42,6 +44,22 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>            
+                <groupId>com.licel</groupId>
+                <artifactId>stringer-maven-plugin</artifactId>
+                <version>${stringer.version}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>stringer</goal>
+                        </goals>
+                        <configuration>
+                           <configFile>${stringer.config}</configFile>   
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
